Fixing cosmetic problems with preferences; fixed squished graphics pointed out by Patti

--- a/toolkit/themes/winstripe/global/preferences.css
+++ b/toolkit/themes/winstripe/global/preferences.css
@@ -90,11 +90,6 @@ radio[pane] {
   color: -moz-FieldText;
 }
 
-.paneButtonIcon {
-  width: 32px;
-  height: 32px;
-}
-
 radio[pane]:hover {
   background-color: #E0E8F6;
   color: black;
